# Timelapse-Creator

./: .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  build-linux.sh  build-macos.sh  build-windows.bat  index.html  main.js  main.py  package-lock.json  package.json  preload.js  requirements.txt  run-tests.sh  tailwind.config.js  version.py  video_utils.py  webpack.config.js
.github/workflows/: build-release.yml
frontend/: .stylelintrc.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/ui/: scroll-area.tsx
frontend/src/test/: App.test.tsx  setup.ts  utils.test.ts
src/: App.js  index.css  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  video.rs
