[package]
name = "timelapse-creator"
version = "1.0.0"
description = "A highly optimized timelapse creator with beautiful native UI"
authors = ["Animikh Aich <animikhaich@gmail.com>"]
license = "MIT"
repository = "https://github.com/animikhaich/Timelapse-Creator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = "z"
strip = true
